@@ -1,10 +1,16 @@
 package com.neritech.saas.ordemservico.service;
 
-import com.neritech.saas.ordemservico.domain.*;
+import com.neritech.saas.common.exception.BusinessException;
+import com.neritech.saas.common.tenancy.TenantAccess;
+import com.neritech.saas.ordemservico.domain.Checklist;
+import com.neritech.saas.ordemservico.domain.ItChecklist;
+import com.neritech.saas.ordemservico.domain.OSChecklistItem;
+import com.neritech.saas.ordemservico.domain.OrdemServico;
 import com.neritech.saas.ordemservico.dto.OSChecklistCopyRequest;
 import com.neritech.saas.ordemservico.dto.OSChecklistItemRequest;
 import com.neritech.saas.ordemservico.dto.OSChecklistItemResponse;
 import com.neritech.saas.ordemservico.mapper.OSChecklistItemMapper;
+import com.neritech.saas.ordemservico.repository.ChecklistRepository;
 import com.neritech.saas.ordemservico.repository.ItChecklistRepository;
 import com.neritech.saas.ordemservico.repository.OSChecklistItemRepository;
 import com.neritech.saas.ordemservico.repository.OrdemServicoRepository;
@@ -13,7 +19,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -21,33 +26,45 @@ public class OSChecklistService {
 
     private final OSChecklistItemRepository repository;
     private final OrdemServicoRepository osRepository;
+    private final ChecklistRepository checklistRepository;
     private final ItChecklistRepository itChecklistRepository;
     private final OSChecklistItemMapper mapper;
 
-    public OSChecklistService(OSChecklistItemRepository repository,
-                              OrdemServicoRepository osRepository,
-                              ItChecklistRepository itChecklistRepository,
-                              OSChecklistItemMapper mapper) {
+    public OSChecklistService(
+            OSChecklistItemRepository repository,
+            OrdemServicoRepository osRepository,
+            ChecklistRepository checklistRepository,
+            ItChecklistRepository itChecklistRepository,
+            OSChecklistItemMapper mapper) {
         this.repository = repository;
         this.osRepository = osRepository;
+        this.checklistRepository = checklistRepository;
         this.itChecklistRepository = itChecklistRepository;
         this.mapper = mapper;
     }
 
     public List<OSChecklistItemResponse> copyFromChecklist(OSChecklistCopyRequest request) {
-        OrdemServico os = osRepository.findById(request.ordemServicoId())
-                .orElseThrow(() -> new EntityNotFoundException("Ordem de Serviço não encontrada"));
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        OrdemServico os = requireOwnedOrder(request.ordemServicoId(), tenantId);
+        Checklist checklist = checklistRepository.findByIdAndEmpresaId(request.checklistId(), tenantId)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Checklist modelo não encontrado para a empresa autenticada"));
 
-        List<ItChecklist> itensModelo = itChecklistRepository.findByChecklist_Id(request.checklistId());
-        if (itensModelo.isEmpty()) {
-            return List.of();
+        if (repository.existsByOrdemServico_IdAndOrdemServico_EmpresaIdAndChecklistModelo_Id(
+                os.getId(), tenantId, checklist.getId())) {
+            throw new BusinessException("Este checklist já está aplicado à Ordem de Serviço.");
         }
 
-        int ordem = 1;
+        List<ItChecklist> itensModelo = itChecklistRepository.findByChecklist_Id(checklist.getId());
+        if (itensModelo.isEmpty()) {
+            throw new BusinessException("O checklist selecionado não possui itens configurados.");
+        }
+
+        int ordem = repository.findByOrdemServico_IdAndOrdemServico_EmpresaId(os.getId(), tenantId).size() + 1;
         for (ItChecklist it : itensModelo) {
             OSChecklistItem item = new OSChecklistItem();
             item.setOrdemServico(os);
-            item.setChecklistModelo(it.getChecklist());
+            item.setChecklistModelo(checklist);
             item.setItemModelo(it);
             item.setDescricao(it.getDsItChecklist());
             item.setFeito(false);
@@ -55,30 +72,38 @@ public class OSChecklistService {
             repository.save(item);
         }
 
-        return repository.findByOrdemServico_Id(os.getId()).stream()
-                .map(mapper::toResponse)
-                .collect(Collectors.toList());
+        return listByOS(os.getId());
     }
 
     @Transactional(readOnly = true)
     public List<OSChecklistItemResponse> listByOS(Long ordemServicoId) {
-        return repository.findByOrdemServico_Id(ordemServicoId).stream()
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        requireOwnedOrder(ordemServicoId, tenantId);
+        return repository.findByOrdemServico_IdAndOrdemServico_EmpresaId(ordemServicoId, tenantId).stream()
                 .map(mapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public OSChecklistItemResponse update(Long id, OSChecklistItemRequest request) {
-        OSChecklistItem entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Item de checklist da OS não encontrado"));
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        OSChecklistItem entity = repository.findByIdAndOrdemServico_EmpresaId(id, tenantId)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Item de checklist da OS não encontrado para a empresa autenticada"));
         mapper.updateEntityFromRequest(request, entity);
-        OSChecklistItem saved = repository.save(entity);
-        return mapper.toResponse(saved);
+        return mapper.toResponse(repository.save(entity));
     }
 
     public void delete(Long id) {
-        if (!repository.existsById(id)) {
-            throw new EntityNotFoundException("Item de checklist da OS não encontrado");
-        }
-        repository.deleteById(id);
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        OSChecklistItem entity = repository.findByIdAndOrdemServico_EmpresaId(id, tenantId)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Item de checklist da OS não encontrado para a empresa autenticada"));
+        repository.delete(entity);
+    }
+
+    private OrdemServico requireOwnedOrder(Long ordemServicoId, Long tenantId) {
+        return osRepository.findByIdAndEmpresaId(ordemServicoId, tenantId)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Ordem de serviço não encontrada para a empresa autenticada"));
     }
 }
